third_party/WebKit/Source/modules/webaudio/AudioNode.h
@@ -229,6 +229,11 @@ class MODULES_EXPORT AudioHandler : public ThreadSafeRefCounted<AudioHandler> {
   void updateChannelCountMode();
   void updateChannelInterpretation();
 
+  // Default callbackBufferSize should be the render quantum size
+  virtual size_t callbackBufferSize() const {
+    return AudioUtilities::kRenderQuantumFrames;
+  }
+
  protected:
   // Inputs and outputs must be created before the AudioHandler is
   // initialized.
